--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "socket.io": "^2.5.0",
+    "socket.io-client": "^4.7.2",
     "three": "^0.155.0",
     "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4"
